--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 # Terraform state files
 terraform.tfstate
 terraform.tfstate.backup
-
+terrform/terraform.tfstate*
 # Terraform lock file
 .terraform.lock.hcl
 
